--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "vitepress-starter",
+  "name": "bookshelves-doc-nuxt",
   "version": "1.0.0",
-  "description": "Vite press starter",
-  "main": "index.js",
-  "repository": "https://www.github.com/bekaku",
-  "author": "bekaku",
-  "license": "MIT",
+  "private": true,
   "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate"
   },
-  "devDependencies": {
-    "vitepress": "^0.20.1"
+  "dependencies": {
+    "@nuxt/content-theme-docs": "^0.11.0",
+    "nuxt": "^2.15.8"
   }
 }
